Add swagger for register users
